Fix text overflow issue

--- a/app/assets/stylesheets/stories/story.scss
+++ b/app/assets/stylesheets/stories/story.scss
@@ -1,9 +1,27 @@
 .story {
   background-color: #f4f4f4;
   font-size: 12px;
-  padding: 5px 0;
+  padding: 5px;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #ddd;
+  font-weight: 400;
+  color: #111;
+  white-space: normal;
+  @extend %clear;
+
+  .icons {
+    vertical-align: top;
+    margin-right: -10px;
+    float: left;
+    font-size: 16px;
+  }
+
+  p {
+    float: right;
+    padding: 0 10px;
+    width: 305px;
+    margin-top: 4px;
+  }
 }
 
 .story-container {
@@ -52,6 +70,10 @@
   padding: 5px 10px;
 }
 
+.button-status:first-of-type {
+  margin-left: 3px;
+}
+
 .button-status {
   background-color: #ddd;
   border-radius: 3px;
@@ -59,9 +81,8 @@
   cursor: pointer;
   float: right;
   font-weight: 600;
-  margin-right: 10px;
-  margin-left: -5px;
   padding: 3px 8px;
+  margin-top: -1px;
 }
 
 .button-status-Started {
